[metadata]
name = QMcrbm
version = 0.0.1
description = CRBM implementation for precise quantum measurements
long_description = file: README.md
classifiers = 
    Programming Language :: Python :: 3
    License ::OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src